fix: add animation when hover, h1 align center

--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -7,7 +7,14 @@ html {
     max-width: 1920px;
 }
 
-
+h1 {
+    margin: auto;
+    display: block;
+    text-align: center;
+    padding-bottom: 10px;
+    font-size: 2.4rem;
+    font-weight: 700;
+}
 .accordion{
     max-width: 60rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -49,6 +56,7 @@ html {
 
 .accordion__label:hover + .accordion__content {
     display: block;
+    animation: fadeIn 2s;
 }
 
 .accordion__content{
